# delivery

./: README.md  app.py  database.py  exec_db.py  pyproject.toml
database/: database.db
static/: script.js  style.css
templates/: admin.html  index.html  novo_pedido.html
