[tool.poetry]
name = "delivery"
version = "0.1.0"
description = "Sistema de logistica para delivery"
authors = ["ruan.ds <ruantmelon@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
